[package]
name = "jsmeld"
version = "0.1.0"
edition = "2021"
description = "A Rust wrapper around SWC for JavaScript/TypeScript compilation and bundling"
license = "Apache-2.0"
repository = "https://github.com/pydsigner/jsmeld"
categories = ["compilers", "web-programming"]
include = ["src/", "README.md", "LICENSE"]

[lib]
name = "jsmeld"
path = "src/lib.rs"
crate-type = ["cdylib","rlib"]

[[bin]]
name = "jsmeld"
path = "src/main.rs"

[dependencies]
swc = "56.0.0"
swc_atoms = "9.0.0"
swc_common = { version = "19.0.0", features = ["tty-emitter"] }
swc_bundler = "44.0.0"
swc_ecma_ast = { version = "21.0.0", features = ["serde"] }
swc_ecma_codegen = "24.0.0"
swc_ecma_loader = { version = "19.0.0", features = ["node", "cache"] }
swc_ecma_minifier = "46.0.0"
swc_ecma_parser = "35.0.0"
swc_ecma_transforms = "48.0.0"
swc_error_reporters = "21.0.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.0"
once_cell = "1.19"
clap = { version = "4", features = ["derive"] }
pyo3 = "0.28.2"
lightningcss = { version = "1.0.0-alpha.71", default-features = false, features = ["visitor"] }

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
